# sqlalchemy-declarative

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  setup.cfg
src/sqlalchemy_declarative/: __init__.py  declarative.py  role.py  schema.py
src/sqlalchemy_declarative_database/: __init__.py  alembic.py  functools.py  sqlalchemy.py
src/sqlalchemy_declarative_database/alembic/: comparison.py  operation.py  renderer.py
src/sqlalchemy_declarative_database/alembic/implementation/: __init__.py  base.py  role.py  schema.py
src/sqlalchemy_declarative_database/grant/: base.py
src/sqlalchemy_declarative_database/role/: __init__.py  alembic.py  algorithms.py  base.py  ddl.py
src/sqlalchemy_declarative_database/schema/: __init__.py  alembic.py  base.py  ddl.py
src/sqlalchemy_declarative_database/sqlalchemy/: __init__.py  base.py  schema.py
src/sqlalchemy_declarative_database/types/: __init__.py
src/sqlalchemy_declarative_metadata/: __init__.py  types.py
src/sqlalchemy_declarative_metadata/alembic/: comparison.py  operation.py  renderer.py
src/sqlalchemy_declarative_metadata/alembic/implementation/: __init__.py  role.py  schema.py
tests/: test_declarative.py
tests/migrations/: env.py
tests/role/: test_algorithms.py  test_sqlalchemy.py
tests/schema/: test_sqlalchemy.py
tests/sqlalchemy/: test_schema.py
